<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guide Droid</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_quit_title">Confirm quit?</string>
    <string name="dialog_quit_ok">Yes</string>
    <string name="dialog_quit_cancel">No</string>
    
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving GuideDroid.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="start_stop">Start/Stop</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="action_quit">Quit</string>
    <string name="guidedroid_preferences">Preferences</string>
    <string name="title_beep_preference">Beep</string>
    <string name="summary_beep_preference_yes_no">Use sound to warn obstacles</string>
    <string name="title_vibration_preference">Vibration</string>
    <string name="summary_vibration_preference_yes_no">Use vibration to warn obstacles</string>

    <!--  Content Descriptions -->
    <string name="description_beep">Beep button</string>
    <string name="description_speech">Speech button</string>
    <string name="description_minus">Minus button</string>
    <string name="description_plus">Plus button</string>
    <string name="description_power">Power button</string>
    <string name="description_help">Help button</string>

</resources>